# jun25_bmle_mlops_rakuten1

./: .dockerignore  .gitignore  HOW_TO_DOCKER.md  HOW_TO_PROJECT.md  HOW_TO_RUFF.md  README.md  docker-compose-ETL.yml  docker-compose-api.yml  docker-compose-data.yml  docker-compose-etl.yml  docker-compose-example.yml  docker-compose-mongodb.yml  docker-compose-mongodb.yml.old  docker-compose-predict.yml  docker-compose-train.yml  docker-compose.yaml  docker_commands_examples.sh  main.py  project_structure.md  pyproject.toml  requirements-predict.txt  requirements-train.txt
.github/workflows/: python-app.yml
conf/: mongodb.yaml
data/processed/: X_train.npz  X_val.npz  tfidf_vectorizer.joblib  y_train.npy  y_val.npy
docker/airflow/: Dockerfile  entrypoint.sh  how_to_airflow.md  init-airflow.sh
docker/api/: Dockerfile
docker/clean_data/: Dockerfile
docker/data/: Dockerfile
docker/data/preprocessing/: Dockerfile
docker/example/: Dockerfile
docker/ml/: Dockerfile
docker/mlflow/: Dockerfile  entrypoint.sh
docker/mongodb/: Dockerfile  how_to_mongodb.md  indexes.json  init-mongodb.sh  mongodb.yaml
docker/predict/: predict.Dockerfile
docker/preprocess_data/: Dockerfile
docker/train/: train.Dockerfile
mlruns/0/: meta.yaml
mlruns/589453162926227519/: meta.yaml
mlruns/589453162926227519/53ab3ccd0a4547fdac715e102e2877ce/: meta.yaml
mlruns/589453162926227519/53ab3ccd0a4547fdac715e102e2877ce/metrics/: accuracy  f1
mlruns/589453162926227519/53ab3ccd0a4547fdac715e102e2877ce/outputs/m-2bd2a0b651ed48f28fd2772621a74af3/: meta.yaml
mlruns/589453162926227519/8b16ae1d52f64df18fe9dad2f0582233/: meta.yaml
mlruns/589453162926227519/8b16ae1d52f64df18fe9dad2f0582233/metrics/: accuracy  f1
mlruns/589453162926227519/8b16ae1d52f64df18fe9dad2f0582233/outputs/m-13b0341f467343248630867ab28ca2cf/: meta.yaml
mlruns/589453162926227519/abe97529569a4397a313762ab4899836/: meta.yaml
mlruns/589453162926227519/abe97529569a4397a313762ab4899836/metrics/: accuracy  f1
mlruns/589453162926227519/abe97529569a4397a313762ab4899836/outputs/m-bc0a9b83702c4009966861d25fe15725/: meta.yaml
mlruns/589453162926227519/b6152312297d46e6a1ce9f035ed16a20/: meta.yaml
mlruns/589453162926227519/b6152312297d46e6a1ce9f035ed16a20/artifacts/metrics/: metrics_fusion.json
mlruns/589453162926227519/b6152312297d46e6a1ce9f035ed16a20/artifacts/preprocessing/: label_encoder.joblib
mlruns/589453162926227519/b6152312297d46e6a1ce9f035ed16a20/metrics/: accuracy  f1
mlruns/589453162926227519/b6152312297d46e6a1ce9f035ed16a20/outputs/m-25059b84fa9d4e8886bfafac0cdd0730/: meta.yaml
mlruns/589453162926227519/d4917b8ff1eb4eaba5db5d6066559d4d/: meta.yaml
mlruns/589453162926227519/d4917b8ff1eb4eaba5db5d6066559d4d/metrics/: accuracy  f1
mlruns/589453162926227519/d4917b8ff1eb4eaba5db5d6066559d4d/outputs/m-46228351e4b74aa491702650106a9222/: meta.yaml
mlruns/589453162926227519/e0860f7b596a4321bec741e7ad8a7439/: meta.yaml
mlruns/589453162926227519/e0860f7b596a4321bec741e7ad8a7439/metrics/: accuracy  f1
mlruns/589453162926227519/e0860f7b596a4321bec741e7ad8a7439/outputs/m-d02ed5c07a3245b08b763ab5bff473cb/: meta.yaml
mlruns/589453162926227519/e0860f7b596a4321bec741e7ad8a7439/tags/: mlflow.source.git.commit
mlruns/589453162926227519/ea55cd9fa87740a2a6783cad9f9ca7b3/: meta.yaml
mlruns/589453162926227519/ea55cd9fa87740a2a6783cad9f9ca7b3/metrics/: accuracy  f1
mlruns/589453162926227519/ea55cd9fa87740a2a6783cad9f9ca7b3/outputs/m-9e9836f4d8d5430a94dfe1c56e74b255/: meta.yaml
mlruns/589453162926227519/ea55cd9fa87740a2a6783cad9f9ca7b3/tags/: mlflow.runName  mlflow.source.name
notebooks/: 01_inference.ipynb  01_pipeline_data_train_xgb.ipynb  02_pipeline_xtest_mlflow_xgb.ipynb
src/api/: api.py  login.py  predict.py  predict_api.py  train_api.py
src/app_api/: api.py
src/data/: Dockerfile  clean_data.py  clean_text.py  docker-compose.yaml  example_mongo_req.py  preprocess_data.py  test.py  test_db.py
src/mongodb/: conf_loader.py  setup_database.py  utils.py
src/predict/: 00_predict.py  predict.py
src/tests/: test.py
src/train/: 01_train.py  train.py
tests/: test_api.py  test_dummy.py
